--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Hello Extension</title>
+    <script src="js/lib/JSXTransformer.js"></script>
+    <script src="js/lib/react.min.js"></script>
     <link rel="stylesheet" href="css/popup.css" type="text/css">
   </head>
   <body>
-    <p id="title"></p>
-    <p id="url"></p>
+    <div id="content"></div>
+    <script src="js/app.js"></script>
     <!-- Load JavaScript -->
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/popup.js"></script>
