--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/popup.css" type="text/css">
   </head>
   <body>
+    <div id="search"></div>
     <div id="content"></div>
     <script src="js/app.js"></script>
     <!-- Load JavaScript -->
